tests/NormalTests/paczka1/fuzzy1/10344671.err
Error in line 3: C45Z A441 51,8
Error in line 5: A235 A441 28,3
Error in line 7: KawAZ71TWi A441 64,9
Error in line 6: A235 A235 51,4
Error in line 16: KawAZ71TWi A441 28,9
Error in line 24: YbKqdYd A235 60,8
Error in line 27: YbKqdYd S629 36,0
